report ghost -> report problem
